Add new recipes, modify index, add image files
Added recipes SnS.html and Lasagna.html with corresponding image files

modified index.html to include href to new recipes

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
   </head>
   <body>
     <h1>Recipes</h1>
+    <ul>
+      <li><a href="pages/SnS.html">Sweet and sour chicken </a></li>
+      <li><a href="pages/Lasagna.html">Lasagna</a></li>
+      <li><a href=""></a></li>
+    </ul>
   </body>
 </html>
