add new recipe, image and modify index
added hash.html and corresponding image

updated index.html with href to hash.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
       <li><a href="pages/SnS.html">Sweet and sour chicken </a></li>
       <li><a href="pages/Lasagna.html">Lasagna</a></li>
-      <li><a href=""></a></li>
+      <li><a href="pages/hash.html">Corned beef and potato hash</a></li>
     </ul>
   </body>
 </html>
