add css stylesheets, modify html pages
added style.css, added page-style.css

modify index.html SnS.html recipe-template.html to include css selectors
and link to stylesheets

--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipes</title>
+    <link rel="stylesheet" href=css/style.css>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rouge+Script&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Recipes</h1>
-    <ul>
-      <li><a href="pages/SnS.html">Sweet and sour chicken </a></li>
-      <li><a href="pages/Lasagna.html">Lasagna</a></li>
-      <li><a href="pages/hash.html">Corned beef and potato hash</a></li>
+    <h1 class="title">Recipes</h1>
+    <ul style="list-style:none;">
+      <li class="recipe"><a href="pages/SnS.html">Sweet and sour chicken </a></li>
+      <li class="recipe"><a href="pages/Lasagna.html">Lasagna</a></li>
+      <li class="recipe"><a href="pages/hash.html">Corned beef and potato hash</a></li>
     </ul>
   </body>
 </html>
