--- a/pages/recipe-template.html
+++ b/pages/recipe-template.html
@@ -9,28 +9,30 @@
   </head>
   <body>
     <!--insert recipe name in H1 element-->
-    <h1></h1>
+    <h1 class="title heading"></h1>
 
     <!--image of recipe, description in alt-->
-    <img src="" alt="" />
+    <img id="image" src="" alt="" />
 
     <!--insert description of recipe on paragraph element-->
-    <p>
+    <p id="desc">
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum a, sit
       ipsam ea quis cum doloremque vero blanditiis, aliquid id soluta, facilis
       unde. Accusantium reprehenderit consectetur sed cumque vero qui.
     </p>
 
-    <h2>Ingredients</h2>
-    <ul>
+    <h2 class="sub heading">Ingredients</h2>
+    <ul style="list-style: none">
       <li></li>
     </ul>
 
-    <h2>Method</h2>
-    <ol>
+    <h2 class="sub heading">Method</h2>
+    <ol class="method">
       <li></li>
     </ol>
 
-    <a href="../index.html">Home</a>
+    <a id="home" href="../index.html">
+      <button>Home</button>
+    </a>
   </body>
 </html>
