--- a/pages/recipe-template.html
+++ b/pages/recipe-template.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/page-style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rouge+Script&display=swap"
+      rel="stylesheet"
+    />
 
     <!--insert recipe name in title element-->
     <title></title>
@@ -12,7 +19,7 @@
     <h1 class="title heading"></h1>
 
     <!--image of recipe, description in alt-->
-    <img id="image" src="" alt="" />
+    <img id="img" src="" alt="" />
 
     <!--insert description of recipe on paragraph element-->
     <p id="desc">
@@ -31,8 +38,8 @@
       <li></li>
     </ol>
 
-    <a id="home" href="../index.html">
-      <button>Home</button>
+    <a href="../index.html">
+      <button id="home">Home</button>
     </a>
   </body>
 </html>
