--- a/pages/SnS.html
+++ b/pages/SnS.html
@@ -70,7 +70,7 @@
       <li>serve with rice and enjoy</li>
     </ol>
 
-    <a id="home" href="../index.html">
+    <a href="../index.html">
       <button id="home">Home</button>
     </a>
   </body>
